Fix the header spacing.

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -264,14 +264,12 @@ body {
 		padding-bottom: var(--margin--vertical--4);
 
 		> header {
-			column-gap:     var(--margin);
-			display:        grid;
 			margin-bottom:  var(--margin--vertical--4);
-			padding-bottom: var(--margin--vertical);
-			row-gap:        var(--margin--vertical);
 
 			@include breakpoint(568) {
-				grid-template-rows:    min-content 1fr;
+				column-gap:            var(--margin);
+				display:               grid;
+				grid-auto-rows:        min-content 1fr;
 				grid-template-columns: repeat(3, minmax(0, 1fr));
 
 				> h1 { grid-column: 1 / span 2 }
@@ -282,6 +280,8 @@ body {
 
 			// The date.
 			> p {
+				margin-top: var(--margin--vertical);
+
 				@include breakpoint(568) { grid-column: 1 / span 2 }
 			}
 
@@ -291,11 +291,9 @@ body {
 			> address,
 			> ul {
 				@extend %type--layout;
-
 				display:        flex;
 				flex-direction: column;
-				gap:            var(--typography--between);
-				margin-top:     var(--margin--vertical);
+				margin-top:     var(--margin--vertical--2);
 
 				@include breakpoint(568) {
 					grid-row:    1 / span 2;
@@ -312,11 +310,9 @@ body {
 
 			// The info block on the index.
 			> address {
+				gap: var(--margin--vertical);
+
 				> div {
-					margin-top: var(--margin--vertical);
-
-					@include breakpoint(568) { margin-top: auto }
-
 					> p > a { @extend %icon--link }
 
 					> p:not(:first-child) { margin-top: var(--typography--between) }
@@ -328,6 +324,8 @@ body {
 			// The ToC.
 			> ul {
 				--typography--leading: var(--typography--leading--loose);
+
+				gap: var(--typography--between);
 
 				@include breakpoint(568) { --typography--leading: var(--typography--leading--base) }
 
